fix: overflow hidden

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
@@ -36,6 +35,7 @@ $prueba-tecnica-theme: mat.define-light-theme((
 
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 
 .app__container {
@@ -45,5 +45,11 @@ html, body {
 
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
